syntax = "proto3";

package vio_input_proto;

message Vec3 {
  double x = 1;
  double y = 2;
  double z = 3;
}

message IMUCamData
{
  fixed64 timestamp = 1;
  Vec3 angular_vel = 2;
  Vec3 linear_accel = 3;

  int32 img0_size = 4;
  int32 img1_size = 5;
  bytes img0_data = 6;
  bytes img1_data = 7;
  // bytes img0_full = 8;
}

message IMUCamVec {
  repeated IMUCamData imu_cam_data = 1;
  fixed64 real_timestamp = 2;
  fixed64 dataset_timestamp = 3;
  int32 frame_id = 4;
  fixed64 cam_time = 5;
}